добавлена логика работы с тестами
