# internal/dto/test_dto/event_dto.go
@@ -27,41 +27,50 @@ type TestReportDto struct {
 }
 
 type TestDto struct {
-	ID          uuid.UUID     `json:"id"`
-	Name        string        `json:"name"`
-	Description *string       `json:"description"`
-	Cover       *string       `json:"cover"`
-	Status      string        `json:"status"`
-	StartsAt    time.Time     `json:"starts_at"`
-	EndsAt      *time.Time    `json:"ends_at"`
-	ExtLinkID   *string       `json:"ext_link_id"`
-	Attempts    int           `json:"attempts"`
-	VkPostID    *int64        `json:"vk_post_id"`
-	Questions   []QuestionDto `json:"questions"`
+	ID             uuid.UUID           `json:"id"`
+	Name           string              `json:"name"`
+	Description    *string             `json:"description"`
+	Cover          *string             `json:"cover"`
+	Status         string              `json:"status"`
+	StartsAt       time.Time           `json:"starts_at"`
+	EndsAt         *time.Time          `json:"ends_at"`
+	ExtLinkID      *string             `json:"ext_link_id"`
+	Attempts       int                 `json:"attempts"`
+	VkPostID       *int64              `json:"vk_post_id"`
+	AvailableRoles []string            `json:"available_roles"`
+	Organizers     []dto.UserMiniDto   `json:"organizers"`
+	Attachments    []dto.AttachmentDto `json:"attachments"`
+	Questions      []QuestionDto       `json:"questions"`
 }
 
 type CreateTestDto struct {
-	Name        string        `json:"name"`
-	Description *string       `json:"description"`
-	Cover       *string       `json:"cover"`
-	Status      string        `json:"status"`
-	StartsAt    dto.FlexTime  `json:"starts_at"`
-	EndsAt      *dto.FlexTime `json:"ends_at"`
-	ExtLinkID   *string       `json:"ext_link_id"`
-	Attempts    int           `json:"attempts"`
-	VkPostID    *int64        `json:"vk_post_id"`
+	Name           string              `json:"name"`
+	Description    *string             `json:"description"`
+	Cover          *string             `json:"cover"`
+	Status         string              `json:"status"`
+	StartsAt       dto.FlexTime        `json:"starts_at"`
+	EndsAt         *dto.FlexTime       `json:"ends_at"`
+	ExtLinkID      *string             `json:"ext_link_id"`
+	Attempts       int                 `json:"attempts"`
+	VkPostID       *int64              `json:"vk_post_id"`
+	AvailableRoles []string            `json:"available_roles"`
+	Organizers     []uuid.UUID         `json:"organizers"`
+	Attachments    []dto.AttachmentDto `json:"attachments"`
 }
 
 type UpdateTestDto struct {
-	Name        *string       `json:"name"`
-	Description *string       `json:"description"`
-	Cover       *string       `json:"cover"`
-	Status      *string       `json:"status"`
-	StartsAt    *dto.FlexTime `json:"starts_at"`
-	EndsAt      *dto.FlexTime `json:"ends_at"`
-	ExtLinkID   *string       `json:"ext_link_id"`
-	Attempts    *int          `json:"attempts"`
-	VkPostID    *int64        `json:"vk_post_id"`
+	Name           *string              `json:"name"`
+	Description    *string              `json:"description"`
+	Cover          *string              `json:"cover"`
+	Status         *string              `json:"status"`
+	StartsAt       *dto.FlexTime        `json:"starts_at"`
+	EndsAt         *dto.FlexTime        `json:"ends_at"`
+	ExtLinkID      *string              `json:"ext_link_id"`
+	Attempts       *int                 `json:"attempts"`
+	VkPostID       *int64               `json:"vk_post_id"`
+	AvailableRoles []string             `json:"available_roles"`
+	Organizers     *[]uuid.UUID         `json:"organizers"`
+	Attachments    *[]dto.AttachmentDto `json:"attachments"`
 }
 
 type DeleteTestDto struct {
@@ -99,9 +108,30 @@ type AddAnswerDto struct {
 }
 
 type SetAnswerDto struct {
-	UserID   uuid.UUID  `json:"user_id"`
-	AnswerID *uuid.UUID `json:"answer_id"`
-	Text     *string    `json:"text"`
+	UserID    uuid.UUID  `json:"-"`
+	AttemptID *uuid.UUID `json:"attempt_id"`
+	AnswerID  *uuid.UUID `json:"answer_id"`
+	Text      *string    `json:"text"`
+}
+
+type UserAttemptDto struct {
+	ID            uuid.UUID `json:"id"`
+	AttemptNumber int       `json:"attempt_number"`
+	Points        int       `json:"points"`
+	OrderNumber   int       `json:"order_number"`
+}
+
+type UserAttemptCreatedDto struct {
+	ID            uuid.UUID `json:"id"`
+	AttemptNumber int       `json:"attempt_number"`
+	Started       time.Time `json:"started"`
+}
+
+type UpdateAnswerDto struct {
+	UserID    uuid.UUID  `json:"-"`
+	AttemptID *uuid.UUID `json:"attempt_id"`
+	AnswerID  *uuid.UUID `json:"answer_id"`
+	Text      *string    `json:"text"`
 }
 
 type UserAnswerDto struct {
